<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/otpMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/txt_otp_message"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:id="@+id/edtLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                tools:targetApi="lollipop"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/timer"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/verify"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/btnSignActive"
            app:shadowColor="@color/btnSignShadow"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />

        <TextView
            android:id="@+id/txtResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text="@string/resend_otp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:targetApi="jelly_bean" />
    </LinearLayout>
</RelativeLayout>