<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/BackArrow"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Edit profile"
                app:titleTextColor="@android:color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/download" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/name"
                    android:textColor="@color/back"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/blood_group"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/userGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/gender"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/divider_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="15dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userAddress"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/background_profile_edt"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:text="@string/address"
                        android:textAlignment="gravity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="15dp"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/background_profile_edt"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center_vertical"
                        android:paddingStart="15dp"
                        android:text="@string/phone_number"
                        android:textAlignment="gravity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="15dp"
                        android:text="@string/dob"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userDOB"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/background_profile_edt"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center_vertical"
                        android:paddingStart="15dp"
                        android:text="@string/dob"
                        android:textAlignment="gravity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>